--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,6 @@
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 
-
 	</dependencies>
 
 	<build>
@@ -85,6 +84,106 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>com.github.eirslett</groupId>
+				<artifactId>frontend-maven-plugin</artifactId>
+				<version>1.3</version>
+
+				<executions>
+
+					<execution>
+						<id>install node and npm</id>
+						<goals>
+							<goal>install-node-and-npm</goal>
+						</goals>
+						<configuration>
+							<!-- See https://nodejs.org/en/download/ for latest node and npm (lts) versions -->
+							<nodeVersion>v9.9.1</nodeVersion>
+							<!--<npmVersion>3.10.8</npmVersion>-->
+							<downloadRoot>fifle://.example.org/nodejs/dist/</downloadRoot>
+							 optional: where to install node and npm. Defaults to the working directory
+							<installDirectory>target</installDirectory>
+						</configuration>
+					</execution>
+
+					<execution>
+						<id>npm install</id>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<!-- Optional configuration which provides for running any npm command -->
+						<configuration>
+							<arguments>install</arguments>
+						</configuration>
+					</execution>
+
+					<execution>
+						<id>npm run build</id>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<configuration>
+							<arguments>run build</arguments>
+						</configuration>
+					</execution>
+
+					<execution>
+						<id>bower install</id>
+						<goals>
+							<goal>bower</goal>
+						</goals>
+						<configuration>
+							<arguments>install</arguments>
+						</configuration>
+					</execution>
+
+					<execution>
+						<id>jspm install</id>
+						<goals>
+							<goal>jspm</goal>
+						</goals>
+						<configuration>
+							<arguments>--version</arguments>
+						</configuration>
+					</execution>
+
+					<execution>
+						<id>grunt build</id>
+						<goals>
+							<goal>grunt</goal>
+						</goals>
+						<configuration>
+							<arguments>--no-color</arguments>
+						</configuration>
+					</execution>
+
+					<execution>
+						<id>gulp build</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>gulp</goal>
+						</goals>
+						<configuration>
+							<environmentVariables>
+								<NODE_ENV>production</NODE_ENV>
+							</environmentVariables>
+						</configuration>
+					</execution>
+
+					<execution>
+						<id>javascript tests</id>
+						<goals>
+							<goal>karma</goal>
+						</goals>
+						<configuration>
+							<karmaConfPath>src/test/javascript/karma.conf.ci.js</karmaConfPath>
+						</configuration>
+					</execution>
+
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
 
