--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
-spring.data.rest.base-path=/api
-#application.message: Hello Phil
+#spring.data.rest.base-path=/api
