--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,7 @@
 	<groupId>net.statek</groupId>
 	<artifactId>stateksound</artifactId>
 	<version>0.0.1</version>
-	<packaging>war</packaging>
-	<name>stateksound</name>
+	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -25,18 +24,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-starter-tomcat</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
 		</dependency>
 
 		<!--<dependency>-->
@@ -50,11 +37,16 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
+
 
 	</dependencies>
 
 	<build>
-	<finalName>stateksound</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
