--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
 			<!--<groupId>org.springframework.boot</groupId>-->
 			<!--<artifactId>spring-boot-starter-data-jpa</artifactId>-->
 		<!--</dependency>-->
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 		<!---->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -43,8 +48,7 @@
 			<optional>true</optional>
 		</dependency>
 
-
-	</dependencies>
+		</dependencies>
 
 	<build>
 		<plugins>
